# finalproject_polyakov_m25-555

./: .gitignore  Makefile  main.py  pyproject.toml
data/: users.json
valutatrade_hub/: __init__.py
valutatrade_hub/cli/: interface.py
valutatrade_hub/core/: currencies.py  exceptions.py  models.py  usecases.py  utils.py
